# qobine

./: .gitignore  Cargo.toml  README.md  cargo-sources.json  codebook.toml  io.github.sofusa.qobine.json  justfile
connect-module/: Cargo.toml
connect-module/src/: lib.rs  main.rs
disconnect-module/: Cargo.toml
disconnect-module/src/: main.rs
disconnect-server-module/: Cargo.toml
gtk-module/: Cargo.toml
gtk-module/src/: lib.rs  main.rs  ui.rs
gtk-module/src/ui/: album_detail_page.rs  now_playing_bar.rs  preferences.rs
qobuz-client/: Cargo.toml
qobuz-client/src/: client.rs
qobuz-client/src/qobuz_models/: album.rs  album_suggestion.rs  featured.rs  playlist.rs  track.rs
qobuz-client/tests/: integration_test.rs
qobuz-player-cli/: Cargo.toml
qobuz-player-cli/src/: lib.rs
qobuz-player-client/: Cargo.toml
qobuz-player-client/src/: client.rs  qobuz_models.rs
qobuz-player-client/src/qobuz_models/: discover.rs  featured.rs
qobuz-player-client/tests/: integration_test.rs
qobuz-player-connect/: Cargo.toml  README.md
qobuz-player-connect/src/: lib.rs  main.rs
qobuz-player-controls/: Cargo.toml
qobuz-player-controls/src/: client.rs  controls.rs  database.rs  downloader.rs  lib.rs  models.rs  player.rs  tracklist.rs
qobuz-player-controls/src/models/: mapper.rs
qobuz-player-disconnect/: Cargo.toml  README.md
qobuz-player-disconnect-server/: Cargo.toml  README.md
qobuz-player-disconnect-server/src/: lib.rs  main.rs
qobuz-player-disconnect/src/: client.rs  lib.rs  main.rs
qobuz-player-gpio/: Cargo.toml
qobuz-player-gpio/src/: gpio.rs
qobuz-player-gtk/: Cargo.toml
qobuz-player-gtk/src/: callbacks.rs  lib.rs  main.rs  ui.rs
qobuz-player-gtk/src/ui/: album_detail_page.rs  app_shell.rs  artist_detail_page.rs  detail_page.rs  discover_page.rs  favorite_tracks_page.rs  now_playing_bar.rs  playlist_detail_page.rs  preferences.rs  queue.rs  search_page.rs
qobuz-player-mpris/: Cargo.toml
qobuz-player-mpris/src/: lib.rs
qobuz-player-player/: Cargo.toml
qobuz-player-player/.sqlx/: query-1d936a88eb6d2d64d25208ff536fa6959f5dd11f85ce302ce80c645e4a424bd4.json  query-227e8d779a41e0bdcc5a2d7d70ca01d826e09245667115038641c30c83b5c990.json  query-2c0406151528d545713ace4501c4b128270a0c5f11d5d8770e0cfbd152c4b450.json  query-2df20ff544e33d0cadcf662da94524506568f0d25f6ca3f75a3a2db4e7d96fd8.json  query-419f1e7e8005a9085e6105a924934aeaf5fff7ed3502d5ac27387b801c5c7605.json  query-43c23f8dd8aac039dfb06ab3ceffcc9f5630eddd2b273dce0b2bc490cf08684f.json  query-6246bf2b0e9e08bdba7c807c38dbc79578c8a8d8957c5899b415965215cb8412.json  query-7d3bef8e5bbb88fc84c7a490db5648102bd8b37bc322f634ac4ba1a01e9f0b26.json  query-9abba769f30b43bfa1ce232fe2b2cf99a03bab082300b1ff6acf4b17367e2745.json  query-9ba32a9b605ebda49d00b50ba14733a82cbcd5b1732938c8d5c2374065587c11.json  query-9f5081e06483adc77404dde550fff4cc745587129c42596be58a95159977854c.json  query-a2a9f074cc4741b60ff62547d00119ca545839c78d77d4a1a1506ccfd429fca4.json  query-b7932ef6faff6ef3aa81832c5171756f363409411df8691dd4f1741e49b70214.json  query-cc93cd1dde91132e70e1ed43d9c4a0f6a5e5850add62bdf5b5c68384dd4253f2.json  query-ce4c13e8be9b6c6c9b4b53f06e18fb8a8147c1b211c59582775a671899bd60e5.json  query-d6b648c894ab262a13498385b665a99f44bfb74f38fadff502c3d5c87e9ec184.json  query-d9793a5025bd5eb21eb73144e410b60cc863085fd60954c1043d2595c7c610b3.json  query-e928208de4345435cf6419c726dc6c38b2c9b04341a6550731b21f95a41a6090.json  query-ecddb95263c1ca5ff22f7685e780f490df34e0b03e3eadd8d4d110f65ff0fde2.json  query-edec6bcca18ec75217ab5e5bd3e0a61c3087162e930593d694cbcdafccc30c36.json  query-fb119a55ab2eefa023a84cfaf49f1d9d0d00c05cfd2b0ae629164be4a2013187.json
qobuz-player-player/examples/: qobuz-api.md
qobuz-player-player/migrations/: 20250112090716_initial.up.sql  20250201154726_user_id.up.sql  20250202110024_remove_cached_properties.up.sql  20250217053153_rename_config_to_credentials.up.sql  20250217053237_add_configuration.up.sql  20250301155650_rfid_database.up.sql  20250704171046_persist_tracklist.up.sql  20250910073714_persist_volume.up.sql  20250922180319_persist_cache_entries.up.sql  20260404114739_add_auth_token.up.sql  20260409181934_clean_up_password_and_username.up.sql  20260415114225_default_audio_quality_to_null.up.sql  20260422120134_add_user_id_to_credentials.up.sql  20260508114706_cache_in_config.up.sql  20260522100007_add_file_based_streaming_config.up.sql
qobuz-player-player/src/: client.rs  database.rs  downloader.rs  error.rs  lib.rs  notification.rs  player.rs  simple_cache.rs  sink.rs  stderr_redirect.rs
qobuz-player-rfid/: Cargo.toml  README.md
qobuz-player-rfid/src/: lib.rs  main.rs
qobuz-player-tui/: Cargo.toml  README.md
qobuz-player-tui/src/: app.rs  discover.rs  favorites.rs  genres.rs  lib.rs  main.rs  popup.rs  preferences.rs  queue.rs  search.rs  ui.rs
qobuz-player-tui/src/widgets/: album_list.rs  artist_list.rs  playlist_list.rs  track_list.rs
qobuz-player-web/: Cargo.toml  README.md
qobuz-player-web/assets/: script.js  styles.css  tailwind.css
qobuz-player-web/src/: app_state.rs  lib.rs  main.rs
qobuz-player-web/src/routes/: album.rs  api.rs  discover.rs  now_playing.rs  playlist.rs
qobuz-player-web/templates/: album-tracks.html  album.html  artist.html  connect-content.html  connect.html  controls.html  discover-album-section.html  discover-playlists.html  discover.html  favorites-tracks.html  lazy-load-component.html  now-playing-content.html  now-playing.html  playlist-tracks.html  playlist.html  volume-slider.html
rfid-module/: Cargo.toml  README.md
rfid-module/src/: lib.rs  main.rs
tui-module/: Cargo.toml  README.md
tui-module/src/: app.rs  discover.rs  favorites.rs  genres.rs  lib.rs  main.rs  now_playing.rs  popup.rs  preferences.rs  queue.rs  search.rs  ui.rs  widgets.rs
tui-module/src/widgets/: album_list.rs  artist_list.rs  focus.rs  playlist_list.rs  track_list.rs
web-module/: Cargo.toml  README.md
web-module/assets/: manifest.json  styles.css
web-module/src/: main.rs
web-module/templates/: controls-content.html  controls.html  playlist.html
(+14 files in other folders)
