[package]
name = "disconnect-server-module"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
description.workspace = true

[[bin]]
name = "disconnect-server"
path = "src/main.rs"

[dependencies]
controls-module = { version = "*", path = "../controls-module" }

axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-stream.workspace = true
futures.workspace = true
async-stream.workspace = true
tower-http.workspace = true
