[package]
name = "qobuz-player-cli"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
qobuz-player-controls = { version = "*", path = "../qobuz-player-controls" }
qobuz-player-player = { version = "*", path = "../qobuz-player-player" }

clap.workspace = true
tokio.workspace = true
tokio_schedule.workspace = true
time.workspace = true
tracing.workspace = true
