[package]
name = "qobuz-player-connect"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
description.workspace = true

[[bin]]
name = "qobuz-player-connect"
path = "src/main.rs"

[features]
gpio = ["qobuz-player-gpio/gpio"]

[dependencies]
qobuz-player-controls = { version = "*", path = "../qobuz-player-controls" }
qobuz-player-player = { version = "*", path = "../qobuz-player-player" }
qobuz-player-gpio = { version = "*", path = "../qobuz-player-gpio", optional = true }
qobuz-player-cli = { version = "*", path = "../qobuz-player-cli" }

qonductor.workspace = true
tokio.workspace = true
tracing.workspace = true

# binary dependencies
clap.workspace = true
