[package]
name = "qobuz-player-controls"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
qobuz-player-client = { version = "*", path = "../qobuz-player-client" }

tokio.workspace = true
serde.workspace = true
time.workspace = true
