[package]
name = "qobuz-player-disconnect-server"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
qobuz-player-controls = { version = "*", path = "../qobuz-player-controls" }

axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-stream.workspace = true
futures.workspace = true
md5.workspace = true

async-stream = "0.3"
tower = "0.5"
tower-http = { version = "0.6", features = ["limit"] }
tower_governor = "0.8"
