[package]
name = "qobuz-player-disconnect"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
qobuz-player-controls = { version = "*", path = "../qobuz-player-controls" }
qobuz-player-cli = { version = "*", path = "../qobuz-player-cli" }
qobuz-player-disconnect-server = { version = "*", path = "../qobuz-player-disconnect-server" }

tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
md5.workspace = true

# TODO fix
eventsource-stream = "0.2"

# binary dependencies
clap.workspace = true
