[package]
name = "qobuz-player-gpio"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[features]
gpio = ["rppal"]

[dependencies]
qobuz-player-controls = { version = "*", path = "../qobuz-player-controls" }

tracing.workspace = true
rppal = { workspace = true, optional = true }
tokio.workspace = true
