[package]
name = "qobuz-player-gtk"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
description.workspace = true

[[bin]]
name = "qobuz-player-gtk"
path = "src/main.rs"

[dependencies]
qobuz-player-controls = { version = "*", path = "../qobuz-player-controls" }
qobuz-player-mpris = { version = "*", path = "../qobuz-player-mpris" }
qobuz-player-connect = { version = "*", path = "../qobuz-player-connect" }
qobuz-player-cli = { version = "*", path = "../qobuz-player-cli" }

gtk4 = { version = "0.11", features = ["gnome_50"] }
libadwaita = {version = "0.9" , features = ["v1_9"] }
glib = "0.22"
webkit6 = "0.6"
url = "2.5"

reqwest.workspace = true
tokio.workspace = true
futures.workspace = true

# binary dependencies
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(any(windows, target_os = "linux", target_os = "macos"))'.dependencies]
keepawake = { workspace = true }
