[package]
name = "qobuz-player-player"

version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
qobuz-player-controls = { version = "*", path = "../qobuz-player-controls" }
qobuz-player-client = { version = "*", path = "../qobuz-player-client" }

tokio.workspace = true
rand.workspace = true
tracing.workspace = true
snafu.workspace = true
serde.workspace = true
moka.workspace = true
time.workspace = true
rodio.workspace = true
reqwest.workspace = true
sqlx.workspace = true
serde_json.workspace = true
dirs.workspace = true
parking_lot.workspace = true
libc.workspace = true
futures.workspace = true
