[package]
name = "qobuz-player-rfid"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[[bin]]
name = "qobuz-player-rfid"
path = "src/main.rs"

[features]
gpio = ["qobuz-player-gpio/gpio"]

[dependencies]
qobuz-player-controls = { version = "*", path = "../qobuz-player-controls" }
qobuz-player-player = { version = "*", path = "../qobuz-player-player" }
qobuz-player-connect = { version = "*", path = "../qobuz-player-connect" }
qobuz-player-disconnect = { version = "*", path = "../qobuz-player-disconnect" }
qobuz-player-gpio = { version = "*", path = "../qobuz-player-gpio", optional = true }
qobuz-player-cli = { version = "*", path = "../qobuz-player-cli" }

tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

# binary dependencies
clap.workspace = true
