[package]
name = "qobuz-player-tui"

version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[[bin]]
name = "qobuz-player"
path = "src/main.rs"

[dependencies]
qobuz-player-controls = { version = "*", path = "../qobuz-player-controls" }
qobuz-player-player = { version = "*", path = "../qobuz-player-player" }
qobuz-player-mpris = { version = "*", path = "../qobuz-player-mpris" }
qobuz-player-connect = { version = "*", path = "../qobuz-player-connect" }
qobuz-player-cli = { version = "*", path = "../qobuz-player-cli" }
qobuz-player-disconnect = { version = "*", path = "../qobuz-player-disconnect" }

ratatui.workspace = true
crossterm.workspace = true
futures.workspace = true
ratatui-image.workspace = true
tui-input.workspace = true
image.workspace = true
reqwest.workspace = true
tokio.workspace = true

# binary dependencies
clap.workspace = true

[target.'cfg(any(windows, target_os = "linux", target_os = "macos"))'.dependencies]
keepawake = { workspace = true }
