[package]
name = "web-module"

version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[[bin]]
name = "qobine-web"
path = "src/main.rs"

[features]
gpio = ["gpio-module/gpio"]

[dependencies]
controls-module = { version = "*", path = "../controls-module" }
player-module = { version = "*", path = "../player-module" }
rfid-module = { version = "*", path = "../rfid-module" }
mpris-module = { version = "*", path = "../mpris-module" }
connect-module = { version = "*", path = "../connect-module" }
gpio-module = { version = "*", path = "../gpio-module", optional = true }
cli-module = { version = "*", path = "../cli-module" }
disconnect-module = { version = "*", path = "../disconnect-module" }

axum.workspace = true
axum-extra.workspace = true
time.workspace = true
futures.workspace = true
serde_json.workspace = true
mime.workspace = true
mime_guess.workspace = true
tokio.workspace = true
rust-embed.workspace = true
serde.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
skabelon.workspace = true

# binary dependencies
clap.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
filesentry = "0.2.1"
